--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "firebase": "2.1.x",
     "angularfire": "0.9.1",
     "ng-messages": "*",
-    "ui-router": "~0.2.13"
+    "ui-router": "~0.2.13",
+    "angular-loading-bar": "~0.6.0",
+    "moment": "~2.9.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.0",
